# Game-engine

./: .gitignore  CMakeLists.txt
assets/Textures/Items/: graphics_source.txt
include/: AssetManager.h  Game.h  Scene.h  State.h  StateManager.h  Tile.h  mainmenu.h
src/: AssetManager.cpp  Game.cpp  Scene.cpp  StateManager.cpp  main_laterem.cpp  mainmenu.cpp
